findbugs sb-contrib fixes