@@ -48,7 +48,7 @@ public class StringArrayValue extends AbstractValue implements StoredValue
     {
         final List<String> copiedValues = new ArrayList<>( values == null ? Collections.emptyList() : values );
         copiedValues.removeAll( Collections.singleton( null ) );
-        this.values = Collections.unmodifiableList( copiedValues );
+        this.values = List.copyOf( copiedValues );
     }
 
     public static StoredValueFactory factory( )
@@ -89,7 +89,7 @@ public class StringArrayValue extends AbstractValue implements StoredValue
     @Override
     public List<XmlElement> toXmlValues( final String valueElementName, final XmlOutputProcessData xmlOutputProcessData )
     {
-        final List<XmlElement> returnList = new ArrayList<>();
+        final List<XmlElement> returnList = new ArrayList<>( values.size() );
         for ( final String value : this.values )
         {
             final XmlElement valueElement = XmlChai.getFactory().newElement( valueElementName );
@@ -140,7 +140,7 @@ public class StringArrayValue extends AbstractValue implements StoredValue
                 sb.append( valueIterator.next() );
                 if ( valueIterator.hasNext() )
                 {
-                    sb.append( "\n" );
+                    sb.append( '\n' );
                 }
             }
             return sb.toString();
